# LLM-Driven-Data-Analyst-Assistant

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: __init__.py  main.py
app/analytics/: __init__.py  insight_engine.py  profiler.py  sql_engine.py
app/charts/: __init__.py  chart_generator.py
app/llm/: __init__.py  chat_engine.py
app/reports/: __init__.py  report_generator.py
app/services/: __init__.py  ollama_service.py
app/ui/: __init__.py  components.py  styles.py
app/utils/: __init__.py  logger.py
assets/: README.md
docs/: architecture.md  contributing.md  deployment.md  setup.md
tests/: __init__.py  test_chart_generator.py  test_chat_engine.py  test_insight_engine.py  test_ollama_service.py  test_profiler.py  test_report_generator.py  test_sql_engine.py
