[project]
name = "local-llm-data-analyst"
version = "0.1.0"
description = "A production-quality local LLM data analyst tool powered by Ollama, Streamlit, Pandas, Plotly, and DuckDB."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.40.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "plotly>=5.20.0",
    "duckdb>=1.1.0",
    "pydantic>=2.8.0",
    "pyarrow>=15.0.0",
    "openpyxl>=3.1.0",
    "fpdf2>=2.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "D",   # pydocstyle
]
ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "streamlit.*",
    "pandas.*",
    "plotly.*",
    "duckdb.*",
    "fpdf.*",
    "pyarrow.*",
]
ignore_missing_imports = true
